# pass-cli

./: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  REPOS.md  SOUL.md  TOOLS.md  TheAgency-Analysis.md  USER.md  cli.py  pyproject.toml  repos-config.json  tencent-weixin-openclaw-weixin-2.1.1.tgz
.npm-cache/_npx/c2268fea7b47f542/: package-lock.json  package.json
.openclaw/: workspace-state.json
agent/: TOOLS.md
avatars/: README.md  xiaoniuniu.html
commands/: __init__.py  add.py  delete.py  get.py  init.py  ls.py  stats.py  update.py
docs/: Expire-Management-Design.md  Pass-Management-Design.md
dong_pass/: pyproject.toml
dong_pass/src/dong_pass/: cli.py
memory/: 2026-03-18.md  2026-03-26.md  2026-03-30.md
projects/xbot/: README.md
projects/xbot/app/: pubspec.yaml
projects/xbot/docs/: milestones.md
projects/xbot/server/: .env.example  README.md
projects/xbot/tasks/: done.md  todo.md
repos/AgentHub/: CONCEPT.md  README.md  VISION.md  meeting-2026-03-15.md  meeting-summary.md
repos/AgentHub/spec/: agent-v1.md
repos/CLI/: DEPS.md  README.md  SYSTEM_REVIEW.md  TODO.md
repos/dong-labs/: CLAUDE.md  INSPECTION_REPORT.md  migrate_add_tags.py
repos/dong-labs/docs/: AI-Friendly-CLI-Design.md  (+4 more)
repos/dong-labs/dong-core/: README.md  pyproject.toml  pytest.ini
repos/dong-labs/dong-core/src/dong/: __init__.py  config.py
repos/dong-labs/dong-core/src/dong/dates/: __init__.py  utils.py
repos/dong-labs/dong-core/src/dong/db/: __init__.py  database.py  schema.py
repos/dong-labs/dong-core/src/dong/errors/: __init__.py  exceptions.py
repos/dong-labs/dong-core/src/dong/io/: __init__.py  base.py  registry.py
repos/dong-labs/dong-core/src/dong/output/: __init__.py  formatter.py
repos/dong-labs/dong-core/src/dong/testing/: __init__.py  fixtures.py
repos/dong-labs/dong-core/tests/: __init__.py  conftest.py
repos/dong-labs/dong-core/tests/data/: .gitkeep
repos/dong-labs/dong-core/tests/integration/: __init__.py  test_integration.py
repos/dong-labs/dong-core/tests/unit/: __init__.py  test_dates.py  test_exceptions.py  test_fixtures.py  test_formatter.py
repos/dong-labs/member-cli/: DONGXIAOJUAN.md  README.md  pyproject.toml
repos/dong-labs/member-cli/src/dong_member.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
repos/dong-labs/member-cli/src/member/: cli.py  importer.py
repos/dong-labs/member-cli/src/member/commands/: add.py  export.py  ls.py  remind.py  renew.py  stats.py  update.py
repos/dong-labs/member-cli/src/member/db/: __init__.py  schema.py
repos/xbot/: STATUS.md
skills/analyze-issue/: SKILL.md
skills/check-project/: SKILL.md
skills/new-task/: SKILL.md
skills/pre-release-scan/: SKILL.md
skills/start-version/: skill.md
src/dong_pass/: __init__.py  cli.py  exporter.py
src/dong_pass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pass_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+31 files in other folders)
