[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dong-pass"
version = "0.1.1"
description = "密码咚 - 账号密码管理 CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "gudong"}]
keywords = ["cli", "password", "account", "security"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
dong-pass = "dong_pass.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dong_pass"]
